[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsentinel-cli"
version = "0.6.1"
description = "Agentic security CLI — AI analyst with memory, supply chain audit, MCP audit, red-team probing, and agent discovery"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["ai-security", "agent-security", "agentic-security", "mcp", "mcp-security", "owasp", "llm-security", "supply-chain-security", "cli", "scanner", "devsecops", "red-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
]

# Core — zero extra install needed for sentinel scan
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# sentinel discover (process + network + docker scanning)
discover = [
    "psutil>=5.9.0",    # process scanning
    "httpx>=0.24.0",    # network probing
]
# sentinel scan --connect (live behavior data from platform)
connect = [
    "httpx>=0.24.0",
]
# sentinel mcp scan (MCP server auditing)
mcp = [
    "httpx>=0.24.0",    # HTTP/streamable-HTTP transport
]
# sentinel probe (static attack battery)
probe = [
    "httpx>=0.24.0",
]
# sentinel ai-probe (Claude-driven red-team agent)
ai-probe = [
    "httpx>=0.24.0",
    "anthropic>=0.50.0",
]
# sentinel inspect (agent intelligence report — AI summary optional)
inspect = [
    "httpx>=0.24.0",
    "anthropic>=0.50.0",
]
# sentinel supply-chain (MCP tool manifest supply chain audit — AI analysis optional)
supply-chain = [
    "httpx>=0.24.0",
    "anthropic>=0.50.0",
]
# sentinel agentic (Claude analyst with persistent memory — full agentic security mode)
agentic = [
    "httpx>=0.24.0",
    "anthropic>=0.50.0",
]
# Install everything
all = [
    "psutil>=5.9.0",
    "httpx>=0.24.0",
    "anthropic>=0.50.0",
]

[project.scripts]
sentinel = "agentsentinel_cli.cli:main"

[project.urls]
Homepage   = "https://github.com/jaydenaung/agentsentinel-cli"
Repository = "https://github.com/jaydenaung/agentsentinel-cli"
"Bug Tracker" = "https://github.com/jaydenaung/agentsentinel-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentsentinel_cli"]
